k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ggr-trafic
  labels:
    app.kubernetes.io/name: ggr-trafic
