k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ggr-trafic
  labels:
    app.kubernetes.io/name: ggr-trafic
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - ggr-trafic.k3s.lpb.ovh
      secretName: ggr-trafic-tls
  rules:
    - host: ggr-trafic.k3s.lpb.ovh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ggr-trafic
                port:
                  number: 8080
