k8s/redirect.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  labels:
    app.kubernetes.io/name: ggr-trafic
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-legacy-host
  labels:
    app.kubernetes.io/name: ggr-trafic
spec:
  redirectRegex:
    regex: ^https?://ggr-vacations\.k3s\.lpb\.ovh(.*)
    replacement: https://ggr-trafic.k3s.lpb.ovh${1}
    permanent: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ggr-trafic-http
  labels:
    app.kubernetes.io/name: ggr-trafic
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: ggr-trafic-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: ggr-trafic.k3s.lpb.ovh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ggr-trafic
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ggr-trafic-legacy
  labels:
    app.kubernetes.io/name: ggr-trafic
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: ggr-trafic-redirect-legacy-host@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - ggr-vacations.k3s.lpb.ovh
      secretName: ggr-trafic-legacy-tls
  rules:
    - host: ggr-vacations.k3s.lpb.ovh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ggr-trafic
                port:
                  number: 8080
